# auto-CAN-Communication

./: .gitignore  CMakeLists.txt  README.md  vehComm.cpp
config/: controlConfig.yaml
config/VehicleCanInfo/Appllo-D/: ACAN.yaml  ECAN.yaml  VEHICLE.yaml  pix_plk_self_driving_1.0_20230220.dbc
config/VehicleCanInfo/Car-No.3/: ACAN.yaml  ECAN.yaml
doc/: manual.md  vcanConfig.sh
vehicle/: CMakeLists.txt  Vehicle.cpp  Vehicle.h
vehicle/include/: _Can.h  _CanAutoAnalysis.h  _CanAutoEncapsulation.h  _CanInfo.h  _Communicate.h  _DBCAnalysis.h  _Ethnet.h  _Msg.h  _VehicleAction.h
